flux/infrastructure/network-policies/base/allow-postgres-egress-apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-egress-apiserver
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: app-postgres
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 6443
