flux/infrastructure/network-policies/base/allow-postgres-ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-ingress-backend
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: app-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values: [backend, backend-primary]
      ports:
        - protocol: TCP
          port: 5432
